cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_FLAGS "-std=c++0x -Wall -Werror -O3 -fPIC -g")
add_subdirectory(/usr/src/gtest/ ${CMAKE_CURRENT_BINARY_DIR}/gtest)
FIND_PACKAGE (Boost REQUIRED COMPONENTS regex)
enable_testing()
find_path(GTEST_INC gtest/gtest.h)
INCLUDE_DIRECTORIES(${GTEST_INC})
INCLUDE(FindPkgConfig)
pkg_check_modules(YAML yaml-cpp)
message("Found Yaml " ${YAML_VERSION})
add_definitions(-DUAP_CORE_PATH="/usr/share/uap-core")
add_library(uaparser_cpp_OBJLIB OBJECT UaParser.cpp)
set_target_properties(uaparser_cpp_OBJLIB PROPERTIES POSITION_INDEPENDENT_CODE 1)
add_library(uaparser_cpp SHARED $<TARGET_OBJECTS:uaparser_cpp_OBJLIB>)
add_library(uaparser_cpp_static STATIC $<TARGET_OBJECTS:uaparser_cpp_OBJLIB> )
set_target_properties(uaparser_cpp_static PROPERTIES OUTPUT_NAME uaparser_cpp)
target_link_libraries(uaparser_cpp ${YAML_LIBRARIES} ${Boost_LIBRARIES})
target_link_libraries(uaparser_cpp_static ${YAML_LIBRARIES} ${Boost_LIBRARIES})
add_executable(UaParserTest UaParserTest.cpp)
target_link_libraries(UaParserTest uaparser_cpp_static gtest ${YAML_LIBRARIES} ${Boost_LIBRARIES} pthread)
add_test(UaParserTest UaParserTest)
FILE (GLOB HDR "*.h")
INSTALL (FILES ${HDR} DESTINATION include/uap-cpp)
INSTALL (TARGETS uaparser_cpp uaparser_cpp_static LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)

